# visa

./: .gitignore  .pre-commit-config.yaml  AUTO-AVALIACAO.md  CHANGELOG-v1.4.2-v1.5.0-v1.6.0.md  CHANGELOG.md  CONTRIBUTING.md  INSTRUCOES-COMMIT-v1.4.1.md  INSTRUCOES-COMMIT-v1.4.2-v1.5.0-v1.6.0.md  INSTRUCOES-COMMIT-v1.4.2.md  INSTRUCOES-COMMIT.md  LICENSE  README.en.md  README.md  SECURITY.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml  closed-loop-e2e.yml  tests.yml
agents/visa/: SKILL.md
agents/visa-agents-help/: SKILL.md
agents/visa-agents-help/references/: README.md
agents/visa-claude-md-builder/: SKILL.md
agents/visa-claude-md-builder/references/: README.md
agents/visa-coletor/: SKILL.md
agents/visa-coletor/references/: README.md
agents/visa-data-modeler/: SKILL.md
agents/visa-data-modeler/references/: README.md
agents/visa-design-system/: SKILL.md
agents/visa-design-system/references/: README.md
agents/visa-estrategista/: SKILL.md
agents/visa-estrategista/references/: README.md
agents/visa-etnografo/: SKILL.md
agents/visa-etnografo/references/: README.md
agents/visa-handoff/: SKILL.md
agents/visa-handoff/references/: README.md
agents/visa-inspector/: SKILL.md
agents/visa-inspector/references/: README.md
agents/visa-modelador/: SKILL.md
agents/visa-modelador/references/: README.md
agents/visa-paradigm-advisor/: SKILL.md
agents/visa-paradigm-advisor/references/: README.md
agents/visa-redator/: SKILL.md
agents/visa-redator/references/: README.md
agents/visa-revisor/: SKILL.md
agents/visa-revisor/references/: README.md
agents/visa-strategist/: SKILL.md
agents/visa-strategist/references/: README.md
agents/visa-vertical-fintech-pix/: SKILL.md
agents/visa-vertical-fintech-pix/references/: README.md
agents/visa-vertical-healthtech-anvisa/: SKILL.md
agents/visa-vertical-healthtech-anvisa/references/: README.md
agents/visa-vertical-legaltech-tributario/: SKILL.md
agents/visa-vertical-legaltech-tributario/references/: README.md
agents/visa/references/: checkpoint-guide.md  step-01-first-run.md  step-02-resume.md
docs/: README.md  agents.md  canonical-format.md  closed-loop.md  demo.md  limitations.md  pipeline.md  quickstart.md  troubleshooting.md  why-visa.md
docs/adr/: ADR-0001-zero-external-dependencies.md  ADR-0002-canonical-id-system.md  ADR-0003-collector-gate.md  ADR-0004-multi-agent-orchestration.md  ADR-0005-bridge-pattern.md  README.md
docs/es/: README.md
docs/pt/: README.md
docs/release-history/: README-v2-marketing.md
pytest-cache-files-xuq3phq1/v/cache/: nodeids
src/visa_sdd/: __init__.py  cli.py  exceptions.py  logging.py  telemetry.py  webui.py
tests/: test_logging_exceptions.py  test_visa.py
