[project]
name = "visa-sdd"
version = "1.3.0"
description = "Forward Spec Discovery for AI Agents — espelho à frente do Reversa, com saída canônica consumível pelo paridade-guard."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "spec-driven-development",
    "product-discovery",
    "ai-agents",
    "claude-code",
    "reversa",
    "paridade-guard",
]
authors = [
    { name = "Adgmed2018", email = "Adgmed2018@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]
# paridade-guard é dependência opcional para o teste end-to-end.
# Sem ele, TestEndToEndComParidadeGuard é pulado com SkipTest visível.
e2e = [
    "paridade-guard>=0.3.0",
]

[project.scripts]
visa = "visa_sdd.cli:main"

[project.urls]
Homepage = "https://github.com/Adgmed2018/visa"
Issues   = "https://github.com/Adgmed2018/visa/issues"
Reversa  = "https://github.com/sandeco/reversa"
"paridade-guard" = "https://github.com/Adgmed2018/paridade-guard"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visa_sdd"]
# As skills (.md) DEVEM ser empacotadas dentro do wheel para que o pacote
# instalado via pip consiga rodar `visa install` sem precisar do clone.
[tool.hatch.build.targets.wheel.force-include]
"agents" = "visa_sdd/agents"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "agents/",
    "bin/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "AUTO-AVALIACAO.md",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-v", "--tb=short"]
