[project]
name = "visa-sdd"
version = "1.3.0"
description = "Forward Spec Discovery for AI Agents — espelho à frente do Reversa, com saída canônica consumível pelo paridade-guard."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = [
    "spec-driven-development",
    "product-discovery",
    "ai-agents",
    "claude-code",
    "reversa",
    "paridade-guard",
]
authors = [
    { name = "Adgmed2018", email = "Adgmed2018@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Software Development :: Documentation",
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5",
    "hypothesis>=6.90",
]
e2e = [
    "paridade-guard>=0.3.0",
]
dev = [
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.12",
    "pytest-xdist>=3.5",
    "hypothesis>=6.90",
]

[project.scripts]
visa = "visa_sdd.cli:main"

[project.urls]
Homepage = "https://github.com/Adgmed2018/visa"
Issues   = "https://github.com/Adgmed2018/visa/issues"
Reversa  = "https://github.com/sandeco/reversa"
"paridade-guard" = "https://github.com/Adgmed2018/paridade-guard"
Changelog = "https://github.com/Adgmed2018/visa/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/visa_sdd"]

[tool.hatch.build.targets.wheel.force-include]
"agents" = "visa_sdd/agents"

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "agents/",
    "bin/",
    "tests/",
    "README.md",
    "LICENSE",
    "CHANGELOG.md",
    "AUTO-AVALIACAO.md",
    "pyproject.toml",
]

# =============================================================================
# PYTEST — test configuration
# =============================================================================
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "e2e: marks tests requiring paridade-guard (end-to-end)",
    "integration: marks tests requiring file system operations",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]

# =============================================================================
# RUFF — fast Python linter (replaces Flake8, isort, pyupgrade)
# =============================================================================
[tool.ruff]
target-version = "py310"
line-length = 100
indent-width = 4

[tool.ruff.lint]
# Enable pycodestyle (E), Pyflakes (F), isort (I), flake8-comprehensions (C4),
# flake8-bugbear (B), flake8-tidy-imports (T), pep8-naming (N)
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "C4",    # comprehensions
    "B",     # bugbear
    "T10",   # debug
    "T20",   # print
    "T40",   # deprecated
    "N",     # pep8-naming
    "UP",    # pyupgrade
    "ASYNC", # async
    "PIE",   # pie
    "RUF",   # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "T201",   # print found (debug statements in CLI are intentional)
    "T203",   # print found (CLI output is intentional)
    "B008",   # do not perform function call in argument default
    "N802",   # function name should be lowercase (we follow Python convention for CLI)
    "N803",   # argument name should be lowercase
    "N806",   # variable in function should be lowercase
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert used (tests are allowed)
    "T201",   # print found (test output)
    "T203",   # print found (test output)
    "N802",   # function name not lowercase (test classes)
    "B011",   # assert less than (test assertions are valid)
]
"__init__.py" = [
    "F401",   # imported but unused (module init may import for export)
    "N812",   # imported as alias (exports may use aliases)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# =============================================================================
# MYPY — static type checker
# =============================================================================
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_configs = true
warn_no_return = true
strict_equality = true
strict_concatenate = true
disallow_any_generics = true
disallow_subclassing_any = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "visa_sdd.__init__"
ignore_errors = true

# =============================================================================
# COVERAGE — test coverage reporting
# =============================================================================
[tool.coverage.run]
source = ["visa_sdd"]
branch = true
parallel = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@overload",
]
fail_under = 80
show_missing = true
skip_empty = true

[tool.coverage.html]
directory = "htmlcov"

# =============================================================================
# PRE-COMMIT — git hooks
# =============================================================================
[tool.pre-commit]
autoupdate_schedule = "weekly"

# =============================================================================
# INTERROGATOR — code complexity metrics
# =============================================================================
[tool.interrogator]
exclude = [
    "tests/",
    "*/__pycache__/",
]
max_nesting = 4
max_crew = 8
max_loc = 250
